--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -8,15 +8,16 @@ button {
     cursor: pointer;
 }
 
-.active {
-    background-color: orange;
-}
-
 h3 {
     text-align: center;
 }
 
 /* Add an 'active' class to style the background of the 'Add to Cargo Hold' buttons. */
-
+.active {
+    background-color: orange;
+}
 
 /* Add the 'nearMaxMass' class style here: */
+.nearMaxMass {
+    
+}
