--- a/src/app/crew/crew.component.css
+++ b/src/app/crew/crew.component.css
@@ -20,3 +20,10 @@ h3 {
 }
 
 /* Add a 'selected' class here to style selected astronaut names a different color. */
+.selected {
+    color: green;
+}
+
+.visible {
+    color: none;
+}
